# Odoo-Printer-Manager

./: .gitignore  README.md
.github/workflows/: windows-installer.yml
electornApp/: package-lock.json  package.json
electornApp/electron/: renderer.html  renderer.js  styles.css
electornApp/scripts/: add_service.ps1  add_service.sh  delete_service.ps1  delete_service.sh  restart_service.sh
electronApp/: package.json
electronApp/electron/: main.js  preload.js
electronApp/scripts/: get_ip.ps1  get_ip.sh  main  restart_service.ps1
odoo-printer-manager/: Cargo.toml
odoo-printer-manager/src/: logger.rs  main.rs
odoo-printer-manager/src/libusb/: load_dll.rs  mod.rs
odoo-printer-manager/src/printer/: img.rs  list.rs  mod.rs  print.rs  xml_to_escpos.rs
printer-agent-server/: Readme.md  build.sh  build_windows.bat  ddl_path.py  epson_epos_handler.py  get_printer_list.py  main.py  preview_handler.py  requirements.txt  set_local_ip.py
printer-agent-server/ssl/: printer-server.local.crt  printer-server.local.key
printer-agent-server/templates/: index.html
