[package]
name = "odoo_printer_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
rusb = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
image = "0.25"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false}
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
cfg-if = "1.0"


quick-xml = "0.29.0"

axum = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.4", features = ["trace", "cors"] }
